# Projekt-c-szachy

./: Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  Empty.cpp  Empty.h  Field.cpp  Field.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  README.md  Rook.cpp  Rook.h  colors.h  main.cpp
